--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
 body {
 	background-color: white;
+	background-image: url( "WebsiteBackground1.jpg" );
+	background-repeat: no-repeat;
+	background-position: center top;
+	background-attachment: fixed;
 }
 
 h1 {
-	color: black;
+	color: dodgerblue;
 	text-align: center;
 	font-family: arial;
-	font-size: 40px;
+	font-size: 30px;
+}
+
+h2 {
+	color: dodgerblue;
+	text-align: center;
+	font-family: arial;
+	font-size: 20px;
 }
