--- a/style.css
+++ b/style.css
@@ -56,14 +56,15 @@ body {
 	left: 0;
 	bottom: 0;
 	width: 100%;
+	height: 11%;
 	background-color: white;
 }
 
-#Introduction{
+#Introduction {
 	border: 2px solid rgb( 48, 109, 170 );
 	background-color: white;
-	width: auto;
-	margin-top: 100px;
+	width: 700px;
+	margin-top: 75px;
 	margin-left: auto;
 	margin-right: auto;
 	padding: 10px;
