--- a/style.css
+++ b/style.css
@@ -42,11 +42,10 @@
 
 body {
 	margin: 0px;
-	background-color: white;
 	background-image: url( "Images/background3.jpg" );
 	background-repeat: no-repeat;
 	background-position: center top;
-	background-size: 103.25%;
+	background-size: cover;
 	position: relative;
 }
 
@@ -57,13 +56,16 @@ body {
 	bottom: 0;
 	width: 100%;
 	height: 11%;
-	background-color: white;
+	background-color: rgb( 48, 109, 170) ;
+	font-family: arial;
+	font-size: 14.5px;
+	color: white;
 }
 
 #Introduction {
 	border: 2px solid rgb( 48, 109, 170 );
 	background-color: white;
-	width: 700px;
+	width: 770px;
 	margin-top: 75px;
 	margin-left: auto;
 	margin-right: auto;
@@ -88,17 +90,36 @@ body {
 	margin-bottom: 10px;
 }
 
-#Descrip2 {
-	color: rgb(48, 109, 170);
+#Bio {
 	text-align: left;
 	font-family: arial;
-	font-size: 20px;
-	margin-top: 0px;
-	margin-bottom: 10px;
+	font-size: 15px;
 }
 
-#Logos {
-	width: 75px;
+#Logo1 {
+	width: 72px;
+	margin-left: 20px;
+	margin-right: auto;
+	margin-bottom: auto;
+}
+
+#Logo2 {
+	width: 200px;
+	margin-left: 20px;
+	margin-right: auto;
+	margin-bottom: auto;
+}
+
+#Logo3 {
+	width: 85px;
+	margin-left: 20px;
+	margin-right:auto;
+	margin-bottom: auto;
+}
+
+
+#Logo4 {
+	width: 285px;
 	margin-left: 20px;
 	margin-right: auto;
 	margin-bottom: auto;
