General small updates to main page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,48 +6,53 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jay Froment-Rudder</title>
-        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
+        <div class="brand">
+            <a href="/" class="brand-link">
+                <img class="brand-image" src="images/JayFroment-Rudder-logos_white-3.png" alt="JFR_logo">
+            </a>
+        </div>
         <div class="container">
+            <nav class="navbar">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <!-- <div id="splash" class="d-flex justify-content-center align-items-center">
-
-		</div> -->
-            <header>
-                <nav class="navbar">
-                    <div class="container-fluid">
-                        <a href="index.html" class="navbar-brand">Logo Here</a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-
-                        <div class="navbar-collapse" id="">
-                            <div class="navbar-nav">
-                                <a href="index.html" class="nav-item nav-link">Home</a>
-                                <a href="index.html" class="nav-item nav-link">Github</a>
-                                <a href="index.html" class="nav-item nav-link">About</a>
-                                <a href="index.html" class="nav-item nav-link">Resume</a>
-                                <a href="index.html" class="nav-item nav-link">Contact</a>
-                            </div>
+                <div class="navbar-collapse" id="">
+                    <div class="navbar-nav">
+                        <div class="nav-item">
+                            <a href="/" class="nav-link">Home</a>
+                        </div>
+                        <div class="nav-item">
+                            <a href="" class="nav-link">About</a>
+                        </div>
+                        <div class="nav-item">
+                            <a href="" class="nav-link">Projects & Previous Work</a>
+                        </div>
+                        <div class="nav-item">
+                            <a href="" class="nav-link">Github</a>
+                        </div>
+                        <div class="nav-item">
+                            <a href="" class="nav-link">Contact</a>
                         </div>
                     </div>
-                </nav>
-            </header>
-            <main>
-                <div class="">
-                    <img src="Images/profile_image.jpg" class="img-fluid rounded-3 mx-auto" alt="Portrait"
-                        id="portrait">
                 </div>
-            </main>
-        </div>
+            </nav>
 
-        <script src="app.js"></script>
+            <div class="main-container">
+                <div class="intro">
+                    <p>
+                        Hello, welcome to my shitty fucking portfolio.
+                    </p>
+                </div>
+            </div>
+        </div>
     </body>
 
 </html>
