--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,13 +12,13 @@
     </head>
 
     <body>
-        <div class="brand">
-            <a href="/" class="brand-link">
-                <img class="brand-image" src="images/JayFroment-Rudder-logos_white-3.png" alt="JFR_logo">
-            </a>
-        </div>
         <div class="container">
             <nav class="navbar">
+                <div class="navbar-brand">
+                    <a href="/" class="navbar-brand-link">
+                        <img class="navbar-brand-image" src="images/JayFroment-Rudder-logos-2.jpeg" alt="JFR_logo">
+                    </a>
+                </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent">
                     <span class="navbar-toggler-icon"></span>
@@ -33,10 +33,10 @@
                             <a href="" class="nav-link">About</a>
                         </div>
                         <div class="nav-item">
-                            <a href="" class="nav-link">Projects & Previous Work</a>
+                            <a href="" class="nav-link">Work</a>
                         </div>
                         <div class="nav-item">
-                            <a href="" class="nav-link">Github</a>
+                            <a href="https://github.com/jfromentrudder" class="nav-link" target="_blank">Github</a>
                         </div>
                         <div class="nav-item">
                             <a href="" class="nav-link">Contact</a>
@@ -46,10 +46,13 @@
             </nav>
 
             <div class="main-container">
-                <div class="intro">
-                    <p>
-                        Hello, welcome to my shitty fucking portfolio.
-                    </p>
+                <div class="intro-area">
+                    <h1 class="site-heading">
+                        Hi! I'm Jay, Full Stack Software Engineer.
+                    </h1>
+                    <div class="my-photo">
+                        <img src="images/profile_image.jpg" alt="A Photo of Me">
+                    </div>
                 </div>
             </div>
         </div>
