Branching to change to React app

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,9 +47,11 @@
 
             <div class="main-container">
                 <div class="intro-area">
-                    <h1 class="site-heading">
-                        Hi! I'm Jay, Full Stack Software Engineer.
-                    </h1>
+                    <div class="intro">
+                        <h1 class="site-heading">
+                            Hi! I'm Jay, Full Stack Software Engineer.
+                        </h1>
+                    </div>
                     <div class="my-photo">
                         <img src="images/profile_image.jpg" alt="A Photo of Me">
                     </div>
