--- a/public/style.css
+++ b/public/style.css
@@ -5,9 +5,7 @@ body {
 }
 
 .container {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
+	display: grid;
 }
 
 .navbar {
@@ -43,9 +41,7 @@ body {
 }
 
 .main-container {
-	display: flex;
-	flex-direction: column;
-	padding: 50px 30px;
+	padding: 20px 20px 20px 30px;
 	margin: auto;
 }
 
@@ -56,7 +52,7 @@ body {
 
 .intro-area {
 	display: grid;
-	grid-template-columns: 1fr 1fr;
+	grid: auto-flow / 1fr 1fr;
 }
 
 @media (max-width: 700px) {
