--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,46 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .top-to-btm {
+        position: relative;
+    }
+    .icon-position {
+        position: fixed;
+        bottom: 40px;
+        right: 25px;
+        z-index: 20;
+    }
+    .icon-style {
+        border: 2px solid #fff;
+        height: 50px;
+        width: 50px;
+        color: #fff;
+        cursor: pointer;
+        animation: movebtn 3s ease-in-out infinite;
+        transition: all .5s ease-in-out;
+    }
+    .icon-style:hover {
+        animation: none;
+        border: 2px solid;
+    }
+
+    @keyframes movebtn {
+        0% {
+            transform: translateY(0px);
+        }
+        25% {
+            transform: translateY(5px);
+        }
+        50% {
+            transform: translateY(0px);
+        }
+        75% {
+            transform: translateY(-5px);
+        }
+        100% {
+            transform: translateY(0px);
+        }
+    }
+}
